# craftos2

./: .gitattributes  .gitignore  .gitmodules  .install  .travis.yml  BenchmarkRenderers.lua  BenchmarkRenderers.sh.bat  CCEmuXConverter.java  CCT-Test-Bootstrap.lua  CCT-Tests.patch  CraftOS-PC 2.aps  CraftOS-PC 2.rc  CraftOS-PC 2.sln  CraftOS-PC 2.vcxproj  CraftOS-PC 2.vcxproj.filters  CraftOS-PC.exe.manifest  CraftOSTest.lua  DOCUMENTATION.md  Info.plist  LICENSE  Makefile  Makefile.emscripten  Makefile.in  README.md  REUSE.toml  SECURITY.md  TerminalWindow.cpp  TerminalWindow.hpp  aclocal.m4  bios.lua  bit.h  config.c  config.h  configure  configure.ac  craftos  fs.c  fs.h  fs_handle.c  fs_handle.h  (+27 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release-hash.yml  release.yml
api/: Computer.hpp  CraftOS-PC.hpp  FileEntry.hpp  Terminal.hpp  configuration.hpp  lib.hpp  peripheral.hpp
api/generic_peripheral/: energy_storage.hpp  fluid_storage.hpp  inventory.hpp
examples/: ccemux.cpp  ccemux.vcxproj  ccemux.vcxproj.filters  example_peripheral.cpp  joystick.cpp  peripheral_base.cpp  plugin_base.cpp  raw_frame_reader.cpp
m4/: find_cxx.m4  find_cxx11.m4
peripheral/: monitor.cpp  monitor.hpp  peripheral.cpp  peripheral.h  printer.cpp  printer.hpp
resources/: .install  BenchmarkRenderers.lua  BenchmarkRenderers.sh.bat  CCEmuXConverter.java  CCT-Test-Bootstrap.lua  CCT-Tests.patch  CraftOS-PC.desktop  CraftOS-PC.exe.manifest  CraftOSTest.lua  Info.plist  analysis.ruleset  appdata.xml  image1.png.license  packStandaloneROM.js
resources/android-project/: build.gradle  gradle.properties  settings.gradle
resources/android-project/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
resources/android-project/app/jni/: Android.mk  Application.mk
resources/android-project/app/jni/src/: Android.mk  CMakeLists.txt
resources/android-project/app/src/main/: AndroidManifest.xml
resources/android-project/app/src/main/java/cc/craftospc/CraftOSPC/: MainActivity.java
resources/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
resources/android-project/app/src/main/res/drawable/: ic_baseline_arrow_back_24.xml  ic_baseline_arrow_forward_24.xml  ic_baseline_close_24.xml  ic_baseline_content_paste_24.xml  ic_baseline_keyboard_24.xml  ic_baseline_keyboard_tab_24.xml  ic_baseline_power_settings_new_24.xml  ic_baseline_refresh_24.xml  ic_baseline_remove_circle_outline_24.xml
resources/android-project/app/src/main/res/layout/: activity_main.xml
resources/android-project/app/src/main/res/mipmap-xxxhdpi/: ic_launcher.png.license
resources/android-project/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
resources/android-project/app/src/main/res/values-night/: themes.xml
resources/android-project/gradle/wrapper/: gradle-wrapper.properties
resources/apport/: apport_crashdb.conf  apport_hook.py
src/: CLITerminalWindow.cpp  CLITerminalWindow.hpp  Computer.cpp  Computer.hpp  TerminalWindow.cpp  TerminalWindow.hpp  UTFString.cpp  UTFString.hpp  apis.hpp  bit.h  bit.hpp  cli.cpp  cli.hpp  config.c  config.cpp  config.h  config.hpp  configuration.cpp  favicon.c  favicon.h  font.c  fs.c  fs.cpp  fs.h  fs.hpp  fs_handle.c  fs_handle.cpp  fs_handle.h  fs_handle.hpp  fs_standalone.hpp  gif.cpp  gif.hpp  http.c  http.cpp  http.h  http.hpp  http_emscripten.cpp  http_handle.c  http_handle.cpp  http_handle.h  (+40 more)
src/apis/: config.cpp  fs.cpp  http.cpp  http_emscripten.cpp  mounter.cpp  os.cpp  periphemu.cpp  peripheral.cpp  redstone.cpp  term.cpp
src/apis/handles/: fs_handle.cpp  fs_handle.hpp  http_handle.cpp  http_handle.hpp
src/mem/: cluster.cpp  cluster.hpp
src/peripheral/: chest.cpp  chest.hpp  computer.cpp  computer.hpp  computer_p.cpp  debug_adapter.cpp  debug_adapter.hpp  debugger.cpp  debugger.hpp  drive.cpp  drive.hpp  energy.cpp  energy.hpp  modem.cpp  modem.hpp  monitor.cpp  monitor.hpp  peripheral.cpp  peripheral.h  peripheral.hpp  printer.cpp  printer.hpp  speaker.cpp  speaker.hpp  speaker_sounds.cpp  tank.cpp  tank.hpp
src/platform/: CraftOS-PC 2.rc  Main.storyboard  android.cpp  darwin.cpp  emscripten.cpp  ios.mm  ios_iap.mm  linux.cpp  macapp.mm  plugin-ios.cpp  resource.h  win.cpp
src/terminal/: CLITerminal.cpp  CLITerminal.hpp  HardwareSDLTerminal.cpp  HardwareSDLTerminal.hpp  LegacyTerminal.cpp  LegacyTerminal.hpp  RawTerminal.cpp  RawTerminal.hpp  SDLTerminal.cpp  SDLTerminal.hpp  TRoRTerminal.cpp  TRoRTerminal.hpp  Terminal.hpp
src/windows/: CraftOS-PC 2.rc  resource.h
